--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,9 +7,19 @@ updates:
     commit-message:
       prefix: "deps"
       prefix-development: "deps-dev"
-    open-pull-requests-limit: 10
+    groups:
+      python-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
 
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
+    groups:
+      github-actions:
+        patterns:
+          - "*"
